# font-rename

./: .gitignore  .pre-commit-config.yaml  README.md  font_rename.py  mypy.ini  pyproject.toml  renamer.py
.github/workflows/: push.yml
