[tool.poetry]
name = "font-rename"
version = "0.1.0"
description = ""
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fonttools = "^4.0.2"
cchardet = "^2.1.4"

[tool.poetry.dev-dependencies]
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
