[tool.poetry]
name = "font-rename"
version = "0.2.0"
description = "Renames fonts to their internal name and unpacks .ttc/.otc files."
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "MIT"
repository = "https://github.com/whtsky/font-rename/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fonttools = "^4.16.1"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
twine = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
font-rename = "font_rename:main"
